# AIJobHunter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.llm  README.md  TODO.txt  _test_cookie_backup.py  deploy.sh  docker-compose.yml  pyproject.toml
agentic_data/: AIJobHunter_Coding_Agent_Plan.md
config/: llm_server.json
data/: cookies.json  job_hunter.db  profiles.yml  user_profile.yml
data/users/51032c64-ad51-4867-a773-c68d3c92bf13/: profiles.yml  user_profile.yml
resources/: coding_guidelines.md
src/job_hunter/: __init__.py  cli.py  llm_client.py
src/job_hunter/auth/: __init__.py  crypto.py  models.py  repo.py  security.py
src/job_hunter/config/: loader.py  models.py
src/job_hunter/db/: migrations.py  models.py  repo.py
src/job_hunter/linkedin/: apply.py  discover.py  form_filler_llm.py  forms.py  parse.py  selectors.py  session.py
src/job_hunter/market/: __init__.py  candidate_model.py  cli.py  db_models.py  dialogue.py  dialogue_eval.py  events.py  extract.py  matching.py  normalize.py  opportunity.py  pipeline.py  repo.py  report.py  role_model.py  schemas.py  title_normalizer.py
src/job_hunter/matching/: description_cleaner.py  embeddings.py  llm_eval.py  scoring.py
src/job_hunter/notifications/: email.py
src/job_hunter/orchestration/: pipeline.py  policies.py
src/job_hunter/profile/: extract.py  generator.py
src/job_hunter/reporting/: report.py
src/job_hunter/scheduling/: scheduler.py
src/job_hunter/utils/: hashing.py  logging.py  rate_limit.py  retry.py
src/job_hunter/web/: app.py  deps.py  docker_ctl.py  model_registry.py  task_manager.py
tests/: test_apply_mock_flow.py  test_config.py  test_db_repo.py  test_description_cleaner.py  test_discover_parse_mock.py  test_linkedin_oauth.py  test_linkedin_session.py  test_llm_eval_schema.py  test_market.py  test_matching_scoring.py  test_notifications.py  test_pipeline.py  test_profile_generation.py  test_reporting.py  test_scheduling.py  test_web.py
tests/fixtures/: profiles.yml  resume.txt
(+54 files in other folders)
