[project]
name = "aijobhunter"
version = "2.0.0"
description = "AI Job Hunter — automated LinkedIn job discovery, scoring, and application"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pymupdf>=1.24",
    "openai>=1.0",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.0",
    "markdown>=3.10.2",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.0",
    "networkx>=3.0",
    "apscheduler>=3.10,<4",
    "resend>=2.0",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "itsdangerous>=2.1",
]

[project.scripts]
hunt = "job_hunter.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_hunter"]
